# juggertube/static/openapi.yaml
@@ -12,7 +12,7 @@ info:
   version: 1.0.0
 
 paths:
-  /teams:
+  /api/teams:
     get:
       tags:
         - team
@@ -27,7 +27,7 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Team'
-  /teams/add:
+  /api/teams/add:
     post:
       tags:
         - team
